# BazelBuildTest

./: .bazelrc  .gitignore  BUILD.bazel  BazelBuildTest.csproj  BazelBuildTest.http  Directory.Build.props  MODULE.bazel  Program.cs  hosting.json
.github/workflows/: ci.yml
BazelBuildTest.Shared/: BUILD.bazel  WeatherForecast.cs
